--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
-node_js: ['4.1']
+node_js:
+- '4.1'
 before_script:
-  - npm install -g harp
-  - npm install
-  - chmod +x ./deploy.sh
-# after_success: ./scripts/deploy.sh  
+- npm install -g harp
+- npm install
+- chmod +x ./deploy.sh
+after_success: ./deploy.sh
+before_install:
+- openssl aes-256-cbc -K $encrypted_f4b5bb51facd_key -iv $encrypted_f4b5bb51facd_iv
+  -in id_dsa.enc -out ~\/.ssh/id_dsa -d
